--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Beibei Yang",
   "license": "ISC",
   "dependencies": {
-    "commander": "^12.1.0"
+    "chalk": "^5.3.0",
+    "commander": "^12.1.0",
+    "node-emoji": "^2.1.3"
   }
 }
